[gd_scene load_steps=2 format=3 uid="uid://startup_menu"]

[ext_resource type="Script" path="res://scripts/startup_menu.gd" id="1_startup"]

[node name="StartupMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_startup")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "魔法师游戏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "选择运行模式："
horizontal_alignment = 1

[node name="ServerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "作为服务端运行"

[node name="ClientButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "作为客户端运行"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "服务端：创建游戏房间，其他玩家可以加入
客户端：连接到现有的游戏房间"
horizontal_alignment = 1
autowrap_mode = 2
